# samta-dashboard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  Makefile.toml  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: dto.rs  main.rs  routes.rs  ws.rs
crates/application/: Cargo.toml
crates/application/src/: cost_tracker.rs  dispatcher.rs  harness.rs  lib.rs  orchestrator.rs  planner.rs  worker.rs
crates/dashboard/: Cargo.toml  tauri.conf.json
crates/dashboard/frontend/: index.html
crates/dashboard/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  state.rs
crates/domain/tests/: state_tests.rs
crates/events/: Cargo.toml
crates/events/src/: envelope.rs  lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  migrations.rs  persistence.rs  redis_cache.rs  replay.rs  ws_gateway.rs
docs/: runpod-onepod-guide.md
migrations/: 001_event_log.sql  002_projections.sql
scripts/: boot-all.sh  local-services.sh  run-agent-harness.sh  runpod-onstart.sh  shutdown-all.sh  start-dashboard.sh
scripts/launchd/: README.md  api.plist.template  worker.plist.template
scripts/service/: run-api.sh  run-worker.sh
scripts/systemd/: README.md  api.service.template  install-templates.sh  worker.service.template
work/: smoke-test.sh
