[workspace]
members = [
    "crates/events",
    "crates/domain",
    "crates/infra",
    "crates/application",
    "crates/api",
    "crates/dashboard",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
