[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
events = { path = "../events" }
infra = { path = "../infra" }
application = { path = "../application" }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
