[package]
name = "application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "rebuild-projections"
path = "src/bin/rebuild.rs"

[dependencies]
domain = { path = "../domain" }
events = { path = "../events" }
infra = { path = "../infra" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
