[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
events = { path = "../events" }
domain = { path = "../domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "postgres", "chrono", "uuid", "json"] }
tokio.workspace = true
